--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -18,6 +18,11 @@ body {
     margin: 0 auto; 
     text-align: center; /* テキスト要素を中央寄せ */
   }
+
+  flex: 1; /* ヘッダーとフッターを除いた部分を埋める */
+  background-image: url('./background.jpg'); /* 画像のパス */
+  background-size: cover;
+  background-position: center;
   
   .table-container {
     display: flex;
@@ -80,5 +85,11 @@ body {
     background-color: #333;
     color: white;
     text-align: center;
+    padding: 10px;
+  }
+
+  .button{
+    color: white;
+    background-color: rgb(0, 102, 255);
     padding: 10px;
   }
