--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -5,9 +5,7 @@ body {
     padding: 0;
     margin: 0 auto; /* 中央寄せ */
     text-align: center;
-    /* display: flex; */
     justify-content: center; 
-    /*テーブルを中央寄せ*/
   }
   
   .main-content {
@@ -19,11 +17,6 @@ body {
     text-align: center; /* テキスト要素を中央寄せ */
   }
 
-  flex: 1; /* ヘッダーとフッターを除いた部分を埋める */
-  background-image: url('./background.jpg'); /* 画像のパス */
-  background-size: cover;
-  background-position: center;
-  
   .table-container {
     display: flex;
     justify-content: center; /* テーブルを中央寄せ */
@@ -92,4 +85,12 @@ body {
     color: white;
     background-color: rgb(0, 102, 255);
     padding: 10px;
+    margin: 10px;
+  }
+
+  .button2{
+    color: white;
+    background-color: gray;
+    padding: 10px;
+    margin: 10px;
   }
